--- a/hobbies.html
+++ b/hobbies.html
@@ -25,6 +25,7 @@
     <li><a href="https://youtu.be/GXcVKUgdHU8">Juggling</a></li>
     <li><a href="https://www.reddit.com/r/drawing/comments/ha4m88/one_point_perspective_practice/">Drawing</a></li>
     <li>Travel</li>
+    <li>Gaming</li>
   </ol>
 
   <hr>
