--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Kit's Resume</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -71,9 +73,8 @@
     </tr>
   </table>
   <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <br>
-  <a href="contact.html">Contact Me</a>
+  <a class="hobbies" href="hobbies.html">My Hobbies</a>
+  <a class="contact" href="contact.html">Contact Me</a>
 </body>
 
 </html>
