--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>My Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -25,13 +27,11 @@
     <li><a href="https://youtu.be/GXcVKUgdHU8">Juggling</a></li>
     <li><a href="https://www.reddit.com/r/drawing/comments/ha4m88/one_point_perspective_practice/">Drawing</a></li>
     <li>Travel</li>
-    <li>Gaming</li>
   </ol>
 
   <hr>
-  <a href="index.html">Main Page</a>
-  <br>
-  <a href="contact.html">Contact Me</a>
+  <a class="main" href="index.html">Main Page</a>
+  <a class="contact" href="contact.html">Contact Me</a>
 </body>
 
 </html>
