--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Me</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -36,9 +38,8 @@
     <input type="Submit" value="Submit">
   </form>
   <hr>
-  <a href="index.html">Main Page</a>
-  <br>
-  <a href="hobbies.html">My Hobbies</a>
+  <a class="main" href="index.html">Main Page</a>
+  <a class="hobbies" href="hobbies.html">My Hobbies</a>
 </body>
 
 </html>
